[package]
name = "chomp"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.0"
rustc-hash = "1.1.0"
syntax = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
base_db = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_def = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_ty = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_expand = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
ide_db = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }


chalk-solve = { version = "0.60", default-features = false }
chalk-ir = "0.60"
chalk-recursive = "0.60"

[dev-dependencies]
expect-test = "1.0"