[package]
name = "chomp"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.0"
rustc-hash = "1.1.0"
syntax = { path = "../__forks__/rust-analyzer/crates/syntax" }
base_db = { path = "../__forks__/rust-analyzer/crates/base_db" }
hir = { path = "../__forks__/rust-analyzer/crates/hir" }
hir_def = { path = "../__forks__/rust-analyzer/crates/hir_def" }
hir_ty = { path = "../__forks__/rust-analyzer/crates/hir_ty" }
hir_expand = { path = "../__forks__/rust-analyzer/crates/hir_expand" }
ide_db = { path = "../__forks__/rust-analyzer/crates/ide_db" }


chalk-solve = { version = "0.60", default-features = false }
chalk-ir = "0.60"
chalk-recursive = "0.60"

[dev-dependencies]
expect-test = "1.0"